[package]
name = "identia"
version = "0.4.32"
description = "Decentralized, censorship resistant social media on IPFS"
authors = [ "iohzrd" ]
license = "AGPL-3.0"
repository = "https://github.com/iohzrd/tauri-svelte"
default-run = "identia"
edition = "2021"
rust-version = "1.64"

[profile.release]
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "1"
ipfs-api-backend-hyper = { version = "*", features = ["with-send-sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-alpha", features = ["dialog-all", "fs-all", "http-all", "icon-png", "native-tls-vendored", "path-all", "reqwest-native-tls-vendored", "shell-open", "shell-sidecar", "system-tray"] }
urlencoding = "2"

[dependencies.rust-ipfs]
git = "https://github.com/iohzrd/rust-ipfs"
branch = "libp2p-next"

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/iohzrd/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-sql]
git = "https://github.com/iohzrd/plugins-workspace"
features = ["sqlite"]
branch = "dev"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
