[package]
name = "identia"
version = "0.5.0"
description = "Decentralized, censorship resistant social media on IPFS"
authors = ["iohzrd"]
license = "AGPL-3.0"
repository = "https://github.com/iohzrd/tauri-svelte"
default-run = "identia"
edition = "2021"
rust-version = "1.70"

[profile.release]
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
# ipfs-api-backend-hyper = { version = "*", features = ["with-send-sync"] }
ipfs-api-backend-hyper = { version = "*", features = [
    "with-send-sync",
], path = "../../rust-ipfs-api/ipfs-api-backend-hyper" }
iroh = "0"
# reqwest = "0.12.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [
    "native-tls-vendored",
    "tray-icon",
    "native-tls-vendored",
    "image-png",
] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
urlencoding = "2"


# monolith deps
url = "2" # Used for parsing URLs
encoding_rs = "0" # Used for parsing and converting document charsets
markup5ever_rcdom = "0.3" # Used for manipulating DOM
reqwest = { version = "0.12", features = [
    "blocking",
    "brotli",
    "default-tls",
    "deflate",
    "gzip",
] }
monolith = { path = "../monolith/" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]
